# SIMDTest

./: .gitignore  .gitmodules  README.md  cal_size.sh
AXPY/: vcl.cpp
benchmark/src/test_codesize/: CMakeLists.txt  makefile
benchmark/src/test_codesize/AXPY/: CMakeLists.txt  eve_AXPY.cpp  highway_AXPY.cpp  makefile  mipp_AXPY.cpp  nsimd_AXPY.cpp  scalar_AXPY.cpp  std_simd_AXPY.cpp  tsimd_AXPY.cpp  vc_AXPY.cpp  vcl_AXPY.cpp  xsimd_AXPY.cpp
benchmark/src/test_codesize/De-quantization/: CMakeLists.txt  eve_quantization.cpp  highway_quantization.cpp  makefile  mipp_quantization.cpp  nsimd_quantization.cpp  scalar_quantization.cpp  std_simd_quantization.cpp  tsimd_quantization.cpp  vc_quantization.cpp  vcl_quantization.cpp  xsimd_quantization.cpp
benchmark/src/test_codesize/RGB2YUV/: CMakeLists.txt  eve_RGB2YUV.cpp  highway_RGB2YUV.cpp  makefile  mipp_RGB2YUV.cpp  nsimd_RGB2YUV.cpp  scalar_RGB2YUV.cpp  std_simd_RGB2YUV.cpp  tsimd_RGB2YUV.cpp  vc_RGB2YUV.cpp  vcl_RGB2YUV.cpp  xsimd_RGB2YUV.cpp
benchmark/src/test_codesize/black_scholes/: CMakeLists.txt  eve_black_scholes.cpp  highway_black_scholes.cpp  makefile  mipp_black_scholes.cpp  nsimd_black_scholes.cpp  scalar_black_scholes.cpp  std_simd_black_scholes.cpp  tsimd_black_scholes.cpp  vc_black_scholes.cpp  vcl_black_scholes.cpp  xsimd_black_scholes.cpp
benchmark/src/test_codesize/conv_maxpooling/: CMakeLists.txt  eve_conv_maxPooling.cpp  highway_conv_maxPooling.cpp  makefile  mipp_conv_maxPooling.cpp  nsimd_conv_maxPooling.cpp  scalar_conv_maxPooling.cpp  std_simd_conv_maxPooling.cpp  tsimd_conv_maxPooling.cpp  vc_conv_maxPooling.cpp  vcl_conv_maxPooling.cpp  xsimd_conv_maxPooling.cpp
benchmark/src/test_codesize/jacobi-2d/: CMakeLists.txt  eve_jacobi2d.cpp  highway_jacobi2d.cpp  makefile  mipp_jacobi2d.cpp  nsimd_jacobi2d.cpp  scalar_jacobi2d.cpp  std_simd_jacobi2d.cpp  tsimd_jacobi2d.cpp  vc_jacobi2d.cpp  vcl_jacobi2d.cpp  xsimd_jacobi2d.cpp
benchmark/src/test_codesize/julia/: CMakeLists.txt  eve_julia.cpp  highway_julia.cpp  makefile  mipp_julia.cpp  nsimd_julia.cpp  scalar_julia.cpp  std_simd_julia.cpp  tsimd_julia.cpp  vc_julia.cpp  vcl_julia.cpp  xsimd_julia.cpp
benchmark/src/test_codesize/mandelbrot/: CMakeLists.txt  eve_mandelbrot.cpp  highway_mandelbrot.cpp  makefile  mipp_mandelbrot.cpp  nsimd_mandelbrot.cpp  scalar_mandelbrot.cpp  std_simd_mandelbrot.cpp  tsimd_mandelbrot.cpp  vc_mandelbrot.cpp  vcl_mandelbrot.cpp  xsimd_mandelbrot.cpp
benchmark/src/test_codesize/nbody/: CMakeLists.txt  eve_nbody.cpp  highway_nbody.cpp  makefile  mipp_nbody.cpp  nsimd_nbody.cpp  scalar_nbody.cpp  std_simd_nbody.cpp  tsimd_nbody.cpp  vc_nbody.cpp  vcl_nbody.cpp  xsimd_nbody.cpp
benchmark/src/test_codesize/newton_fractal/: CMakeLists.txt  eve_newton.cpp  highway_newton.cpp  makefile  mipp_newton.cpp  nsimd_newton.cpp  scalar_newton.cpp  std_simd_newton.cpp  tsimd_newton.cpp  vc_newton.cpp  vcl_newton.cpp  xsimd_newton.cpp
benchmark/src/test_codesize/quadratic/: CMakeLists.txt  eve_quadratic.cpp  highway_quadratic.cpp  makefile  mipp_quadratic.cpp  nsimd_quadratic.cpp  scalar_quadratic.cpp  std_simd_quadratic.cpp  tsimd_quadratic.cpp  vc_quadratic.cpp  vcl_quadratic.cpp  xsimd_quadratic.cpp
benchmark/src/test_functions/: CMakeLists.txt
benchmark/src/test_functions/AXPY/: CMakeLists.txt  eve.cpp  highway.cpp  main.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/Add/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/BroadCast/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/Div/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/Len/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/LoadAligned/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/LoadUnaligned/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/MathEXP/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/MathFabs/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/MathLog/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/MathSqrt/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/Mul/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/StoreAligned/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/StoreUnaligned/: CMakeLists.txt  eve.cpp  highway.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_functions/Sub/: CMakeLists.txt  eve.cpp  highway.cpp  main.cpp  mipp.cpp  nsimd.cpp  std_simd.cpp  tsimd.cpp  vc.cpp  vcl.cpp  xsimd.cpp
benchmark/src/test_performance/: AXPY.cpp  CMakeLists.txt  De-quantization.cpp  GetMin.py  RGB2YUV.cpp  SimdAutoBench  black_scholes.cpp  conv.cpp  jacobi-2d.cpp  julia.cpp  mandelbrot.cpp  nbody.cpp  newton_fractal.cpp  quadratic.cpp
benchmark/src/test_performance/src/AXPY/: CMakeLists.txt  eve_AXPY.cpp  highway_AXPY.cpp  main_AXPY.cpp  mipp_AXPY.cpp  nsimd_AXPY.cpp  scalar_AXPY.cpp  std_simd_AXPY.cpp  tsimd_AXPY.cpp  vc_AXPY.cpp  vcl_AXPY.cpp  xsimd_AXPY.cpp
benchmark/src/test_performance/src/De-quantization/: CMakeLists.txt  (+11 more)
(+153 files in other folders)
