#-------------------------------------------------------------------------------
# Add subdirectory for every API
#-------------------------------------------------------------------------------

add_subdirectory(./LoadAligned)
add_subdirectory(./LoadUnaligned)
add_subdirectory(./StoreAligned)
add_subdirectory(./StoreUnaligned)
add_subdirectory(./Mul)
add_subdirectory(./Add)
add_subdirectory(./Sub)
add_subdirectory(./Div)
add_subdirectory(./MathEXP)
add_subdirectory(./MathFabs)
add_subdirectory(./MathLog)
add_subdirectory(./MathSqrt)
add_subdirectory(./AXPY)
add_subdirectory(./BroadCast)
add_subdirectory(./Len)